force-app/main/default/objects/Questionnaire_Implementation__c/Questionnaire_Implementation__c.object-meta.xml
<CustomObject>
    <label>Demo Questionnaire</label>
    <nameField>
        <displayFormat>Quest{0}</displayFormat>
        <label>IQ- Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>