force-app/main/default/objects/Questionnaire_Implementation__c/fields/a_What_tools_are_you_using_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>a_What_tools_are_you_using_Text_Field__c</fullName>
    <inlineHelpText>What are your short term / long-term goals with Testing?</inlineHelpText>
    <label>Short/ Long Term goals with Testing?</label>
    <type>TextArea</type>
</CustomField>