force-app/main/default/objects/Questionnaire_Implementation__c/fields/ALM_Tools__c.field-meta.xml
<CustomField>
    <fullName>ALM_Tools__c</fullName>
    <label>ALM Tools Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>