force-app/main/default/objects/Questionnaire_Implementation__c/fields/Any_other_CI_CD_tools__c.field-meta.xml
<CustomField>
    <fullName>Any_other_CI_CD_tools__c</fullName>
    <label>Any other CI/CD tools</label>
    <length>255</length>
    <type>Text</type>
</CustomField>