force-app/main/default/objects/Questionnaire_Implementation__c/fields/average_time_taken_per_data_load__c.field-meta.xml
<CustomField>
    <fullName>average_time_taken_per_data_load__c</fullName>
    <label>average time taken per data load?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>