force-app/main/default/objects/Questionnaire_Implementation__c/fields/Average_turnaround_time_for__c.field-meta.xml
<CustomField>
    <fullName>Average_turnaround_time_for__c</fullName>
    <inlineHelpText>What is the average turnaround time for successful deployment?</inlineHelpText>
    <label>Average TAT for Successful Deployment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>