force-app/main/default/objects/Questionnaire_Implementation__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <label>Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>