force-app/main/default/objects/Questionnaire_Implementation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Implementation_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>