force-app/main/default/objects/Questionnaire_Implementation__c/fields/Current_Version_Control_Tool_If_Exists__c.field-meta.xml
<CustomField>
    <fullName>Current_Version_Control_Tool_If_Exists__c</fullName>
    <label>Current Version Control Tool(If Exists)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>