force-app/main/default/objects/Questionnaire_Implementation__c/fields/Data_Loader_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Capabilities__c</fullName>
    <label>Data Loader Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>