force-app/main/default/objects/Questionnaire_Implementation__c/fields/Deployment_User__c.field-meta.xml
<CustomField>
    <fullName>Deployment_User__c</fullName>
    <description>List of Users and roles participating in the release process [ Please provide uniform  corporate e-mail Ids for license activation ]</description>
    <label>Deployment User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>