force-app/main/default/objects/Questionnaire_Implementation__c/fields/Developer_Changes_how_do_you_track__c.field-meta.xml
<CustomField>
    <fullName>Developer_Changes_how_do_you_track__c</fullName>
    <inlineHelpText>How do you keep track of and/or manage developer’s changes?</inlineHelpText>
    <label>Developer Changes (how do you track ?)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>