force-app/main/default/objects/Questionnaire_Implementation__c/fields/Goals_with_Version_Control_Short_Long__c.field-meta.xml
<CustomField>
    <fullName>Goals_with_Version_Control_Short_Long__c</fullName>
    <inlineHelpText>What are your short term / long-term goals with Version Control?</inlineHelpText>
    <label>Version Control Goals (Short/Long Term)</label>
    <type>TextArea</type>
</CustomField>