force-app/main/default/objects/Questionnaire_Implementation__c/fields/Hours_of_effort__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_effort__c</fullName>
    <label>Hours of effort</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>