force-app/main/default/objects/Questionnaire_Implementation__c/fields/How_are_merge_conflicts_addressed__c.field-meta.xml
<CustomField>
    <fullName>How_are_merge_conflicts_addressed__c</fullName>
    <inlineHelpText>How are merge conflicts addressed?</inlineHelpText>
    <label>How are merge conflicts addressed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>