force-app/main/default/objects/Questionnaire_Implementation__c/fields/How_are_metadata_components_being_dep__c.field-meta.xml
<CustomField>
    <fullName>How_are_metadata_components_being_dep__c</fullName>
    <inlineHelpText>How are metadata components being deployed currently?</inlineHelpText>
    <label>How are metadata components are deployed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Sets</fullName>
            </value>
            <value>
                <fullName>Ant Scripts</fullName>
            </value>
            <value>
                <fullName>CI Server (Jenkins, Bamboo, CircleCI etc.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other (Text Field - mandatory if none of the above are selected)</fullName>
                <isActive>false</isActive>
                <label>Other (Text Field - mandatory if none of the above are selected)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>