force-app/main/default/objects/Questionnaire_Implementation__c/fields/How_long_does_it_take_for_pre_post_de__c.field-meta.xml
<CustomField>
    <fullName>How_long_does_it_take_for_pre_post_de__c</fullName>
    <inlineHelpText>How long does it take for pre/post deployment steps?</inlineHelpText>
    <label>Time for pre/post deployment steps ?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>