force-app/main/default/objects/Questionnaire_Implementation__c/fields/How_Often__c.field-meta.xml
<CustomField>
    <fullName>How_Often__c</fullName>
    <description>How often do you encounter errors?</description>
    <label>How often do you encounter errors?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>