force-app/main/default/objects/Questionnaire_Implementation__c/fields/How_often_Data_Loader__c.field-meta.xml
<CustomField>
    <fullName>How_often_Data_Loader__c</fullName>
    <inlineHelpText>How often do you do data loading ?</inlineHelpText>
    <label>How often do you do data loading ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>