force-app/main/default/objects/Questionnaire_Implementation__c/fields/Long_Term_Goals__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Goals__c</fullName>
    <label>Long Term Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>