force-app/main/default/objects/Questionnaire_Implementation__c/fields/Name_of_other_System__c.field-meta.xml
<CustomField>
    <fullName>Name_of_other_System__c</fullName>
    <inlineHelpText>Please specify the Version Control system used under Others</inlineHelpText>
    <label>Plz specify other (VC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>