force-app/main/default/objects/Questionnaire_Implementation__c/fields/No_of_Sanbox_in_Release__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sanbox_in_Release__c</fullName>
    <label>No.of Sanbox in Release</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>