force-app/main/default/objects/Questionnaire_Implementation__c/fields/No_of_time__c.field-meta.xml
<CustomField>
    <fullName>No_of_time__c</fullName>
    <inlineHelpText>How often do you commit changes to version control?</inlineHelpText>
    <label>Changes committed to Version Control?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>