force-app/main/default/objects/Questionnaire_Implementation__c/fields/No_of_time_Developers__c.field-meta.xml
<CustomField>
    <fullName>No_of_time_Developers__c</fullName>
    <inlineHelpText>How often do your developers overwrite code?</inlineHelpText>
    <label>No of time Developers overwrite code ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>