force-app/main/default/objects/Questionnaire_Implementation__c/fields/Number_of_Primary_SI_Partners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Primary_SI_Partners__c</fullName>
    <label>Number of Primary SI Partners</label>
    <length>15</length>
    <type>Text</type>
</CustomField>