force-app/main/default/objects/Questionnaire_Implementation__c/fields/Number_of_Release_Managers_Architect__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Release_Managers_Architect__c</fullName>
    <label>Number of Release Managers/Architect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>