force-app/main/default/objects/Questionnaire_Implementation__c/fields/OpportunityAcc__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ImplementationQuestionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>