force-app/main/default/objects/Questionnaire_Implementation__c/fields/Plz_specify_other_ALM__c.field-meta.xml
<CustomField>
    <fullName>Plz_specify_other_ALM__c</fullName>
    <inlineHelpText>Please specify the Project Management used under Others</inlineHelpText>
    <label>Plz specify other (ALM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>