force-app/main/default/objects/Questionnaire_Implementation__c/fields/Plz_specify_other_Automation_Tool__c.field-meta.xml
<CustomField>
    <fullName>Plz_specify_other_Automation_Tool__c</fullName>
    <label>Plz specify other Automation Tool</label>
    <type>TextArea</type>
</CustomField>