force-app/main/default/objects/Questionnaire_Implementation__c/fields/Plz_specify_other_Metadata_components__c.field-meta.xml
<CustomField>
    <fullName>Plz_specify_other_Metadata_components__c</fullName>
    <inlineHelpText>Please specify how metadata components being deployed currently if not mentioned above ?</inlineHelpText>
    <label>Plz specify other (Metadata components)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>