force-app/main/default/objects/Questionnaire_Implementation__c/fields/Plz_specify_others__c.field-meta.xml
<CustomField>
    <fullName>Plz_specify_others__c</fullName>
    <inlineHelpText>Who are your primary SI Partners (if any)?</inlineHelpText>
    <label>Plz specify other (SI Partners)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>