force-app/main/default/objects/Questionnaire_Implementation__c/fields/Release_Duration__c.field-meta.xml
<CustomField>
    <fullName>Release_Duration__c</fullName>
    <label>Release Duration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>