force-app/main/default/objects/Questionnaire_Implementation__c/fields/Select_use__c.field-meta.xml
<CustomField>
    <fullName>Select_use__c</fullName>
    <label>Select use cases you&apos;d like to evaluate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setting up Production Baseline</fullName>
            </value>
            <value>
                <fullName>Check-in Code/Declarative Changes to Version Control</fullName>
            </value>
            <value>
                <fullName>Integrate work streams for GIT (Merge complete branches)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>