force-app/main/default/objects/Questionnaire_Implementation__c/fields/Select_use_cases_for__c.field-meta.xml
<CustomField>
    <fullName>Select_use_cases_for__c</fullName>
    <inlineHelpText>Select use cases that you wish to evaluate</inlineHelpText>
    <label>Select use cases to evaluate ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated Deployments into Target Orgs</fullName>
            </value>
            <value>
                <fullName>Selectively deploy metadata into Orgs</fullName>
            </value>
            <value>
                <fullName>Synchronize Orgs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>