force-app/main/default/objects/Questionnaire_Implementation__c/fields/Select_use_cases_to_evaluate__c.field-meta.xml
<CustomField>
    <fullName>Select_use_cases_to_evaluate__c</fullName>
    <inlineHelpText>Select use cases that you wish to evaluate:</inlineHelpText>
    <label>Select use cases to evaluate ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migration of parent/child dependencies w/ filters</fullName>
            </value>
            <value>
                <fullName>Incremental migration and data masking</fullName>
            </value>
            <value>
                <fullName>Scheduling jobs and run as post-deployment activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>