force-app/main/default/objects/Questionnaire_Implementation__c/fields/Select_use_VC__c.field-meta.xml
<CustomField>
    <fullName>Select_use_VC__c</fullName>
    <label>Select use cases evaluate_VC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Set up Production Baseline</fullName>
            </value>
            <value>
                <fullName>Check-in Code/Declarative Changes to Version Control</fullName>
            </value>
            <value>
                <fullName>Integrate work streams for GIT (Merge complete branches)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>