force-app/main/default/objects/Questionnaire_Implementation__c/fields/Short_Long_Term_goals_with_Data_Loader__c.field-meta.xml
<CustomField>
    <fullName>Short_Long_Term_goals_with_Data_Loader__c</fullName>
    <inlineHelpText>What are your short term / long-term goals with Data loader Pro?</inlineHelpText>
    <label>Data Loader Pro - Short/ Long Term Goal?</label>
    <type>TextArea</type>
</CustomField>