force-app/main/default/objects/Questionnaire_Implementation__c/fields/Short_Long_Term_goals_with_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Short_Long_Term_goals_with_Deployments__c</fullName>
    <inlineHelpText>What are your short term / long-term goals with Deployments?</inlineHelpText>
    <label>Short/ Long Term goals with Deployments?</label>
    <type>TextArea</type>
</CustomField>