force-app/main/default/objects/Questionnaire_Implementation__c/fields/Short_Term_Goals_with_current_RLM__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Goals_with_current_RLM__c</fullName>
    <label>Short Term Goals with current RLM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>