force-app/main/default/objects/Questionnaire_Implementation__c/fields/Size_of_Sanboxes__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Sanboxes__c</fullName>
    <description>Number and Size of the Sandboxes [ Typically, the number of metadata components / size of package , Data load size and frequency ] that you will use in trial period</description>
    <label>Size of Sanboxes</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>