force-app/main/default/objects/Questionnaire_Implementation__c/fields/Text_Automation_Details__c.field-meta.xml
<CustomField>
    <fullName>Text_Automation_Details__c</fullName>
    <label>Test Automation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>