force-app/main/default/objects/Questionnaire_Implementation__c/fields/Time_taken_for__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_for__c</fullName>
    <inlineHelpText>How much time does it take for a production deployment?</inlineHelpText>
    <label>Time taken for production deployment ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>