force-app/main/default/objects/Questionnaire_Implementation__c/fields/Time_taken_for_commits_mer__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_for_commits_mer__c</fullName>
    <inlineHelpText>How long does it take for commits/merges?</inlineHelpText>
    <label>Time taken for commits/merges ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>