force-app/main/default/objects/Questionnaire_Implementation__c/fields/Typically_how_many_records_do_you_mi__c.field-meta.xml
<CustomField>
    <fullName>Typically_how_many_records_do_you_mi__c</fullName>
    <inlineHelpText>Typically, how many records do you migrate per data load?</inlineHelpText>
    <label>No. records do you migrate per data load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>