force-app/main/default/objects/Questionnaire_Implementation__c/fields/Verison_Control__c.field-meta.xml
<CustomField>
    <fullName>Verison_Control__c</fullName>
    <label>Verison Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Version Control Used</fullName>
            </value>
            <value>
                <fullName>Version Control Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>