force-app/main/default/objects/Questionnaire_Implementation__c/fields/Version_Control__c.field-meta.xml
<CustomField>
    <fullName>Version_Control__c</fullName>
    <label>Version Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Used</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>