force-app/main/default/objects/Questionnaire_Implementation__c/fields/What_are_the_pain_points_during_the_d__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_pain_points_during_the_d__c</fullName>
    <inlineHelpText>What are the pain points during the deployment process?</inlineHelpText>
    <label>Pain point during Deployment process ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>