force-app/main/default/objects/Questionnaire_Implementation__c/fields/What_does_your_current_release_process__c.field-meta.xml
<CustomField>
    <fullName>What_does_your_current_release_process__c</fullName>
    <inlineHelpText>What does your current release process look like? Please attach the files</inlineHelpText>
    <label>What does your current release process</label>
    <length>256</length>
    <type>Html</type>
</CustomField>