force-app/main/default/objects/Questionnaire_Implementation__c/fields/What_is_the_current_team_structure_w__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_current_team_structure_w__c</fullName>
    <label>Current team structure w/  their roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#Developers</fullName>
            </value>
            <value>
                <fullName>#Admins</fullName>
            </value>
            <value>
                <fullName>#Release Managers/Architects</fullName>
            </value>
            <value>
                <fullName>Who are your primary SI Partners (if any)?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>