force-app/main/default/objects/Questionnaire_Implementation__c/fields/What_is_the_plan_for_code_backup__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_plan_for_code_backup__c</fullName>
    <inlineHelpText>What is the plan for code backup?</inlineHelpText>
    <label>What is the plan for code backup?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>