force-app/main/default/objects/Questionnaire_Implementation__c/fields/What_kind_of_testing_do_you_perform__c.field-meta.xml
<CustomField>
    <fullName>What_kind_of_testing_do_you_perform__c</fullName>
    <label>What kind of testing do you perform?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex only</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>