force-app/main/default/objects/Questionnaire_Implementation__c/fields/what_s_the_average_time_per_process__c.field-meta.xml
<CustomField>
    <fullName>what_s_the_average_time_per_process__c</fullName>
    <inlineHelpText>what’s the average time per process?</inlineHelpText>
    <label>what’s the average time per process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>