force-app/main/default/objects/Questionnaire_Implementation__c/fields/What_tools_are_you_using__c.field-meta.xml
<CustomField>
    <fullName>What_tools_are_you_using__c</fullName>
    <inlineHelpText>Mandatory if none of the above is selected</inlineHelpText>
    <label>What tools are you using in Automation ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>