force-app/main/default/objects/Questionnaire_Implementation__c/fields/X1_Any_ETL_tool_currently_being_used__c.field-meta.xml
<CustomField>
    <fullName>X1_Any_ETL_tool_currently_being_used__c</fullName>
    <inlineHelpText>Any ETL tool currently being used?</inlineHelpText>
    <label>Any ETL tool currently being used?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>