force-app/main/default/objects/Questionnaire_Implementation__c/fields/X1_How_do_you_keep_track_of_and_or_manag__c.field-meta.xml
<CustomField>
    <fullName>X1_How_do_you_keep_track_of_and_or_manag__c</fullName>
    <inlineHelpText>How do you keep track of and/or manage developer’s changes? *</inlineHelpText>
    <label>If Version Control is not used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>