force-app/main/default/objects/Questionnaire_Implementation__c/fields/X1_Which_Version_Control_System_is_used__c.field-meta.xml
<CustomField>
    <fullName>X1_Which_Version_Control_System_is_used__c</fullName>
    <label>Which Version Control System is used ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GIT</fullName>
            </value>
            <value>
                <fullName>SVN</fullName>
            </value>
            <value>
                <fullName>TFS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>