force-app/main/default/objects/Questionnaire_Implementation__c/fields/X2_Which_tool_is_used_for_Project_Manage__c.field-meta.xml
<CustomField>
    <fullName>X2_Which_tool_is_used_for_Project_Manage__c</fullName>
    <inlineHelpText>Which tool is used for Project Management (ALM)?</inlineHelpText>
    <label>Which tool is used for ALM ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>Rally</fullName>
            </value>
            <value>
                <fullName>HP ALM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>