force-app/main/default/objects/Questionnaire_Implementation__c/recordTypes/Lead_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Lead_Questionnaire</fullName>
    <active>true</active>
    <label>Lead Questionnaire</label>
</RecordType>