force-app/main/default/objects/Questionnaire_Implementation__c/recordTypes/Opportunity_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Questionnaire</fullName>
    <active>true</active>
    <label>Opportunity Questionnaire</label>
</RecordType>