force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/ALM_Tool_Other_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ALM_Tool_Other_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     ISPICKVAL( X2_Which_tool_is_used_for_Project_Manage__c , &quot;Other&quot;),
     ISBLANK( Plz_specify_other_ALM__c  )
)</errorConditionFormula>
    <errorDisplayField>Plz_specify_other_ALM__c</errorDisplayField>
    <errorMessage>Please specify other (ALM)</errorMessage>
</ValidationRule>