force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Any_ETL_tool_currently_being_used.validationRule-meta.xml
<ValidationRule>
    <fullName>Any_ETL_tool_currently_being_used</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( X1_Any_ETL_tool_currently_being_used__c )</errorConditionFormula>
    <errorDisplayField>X1_Any_ETL_tool_currently_being_used__c</errorDisplayField>
    <errorMessage>Please enter Any ETL Tool currently being used</errorMessage>
</ValidationRule>