force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Company_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Company_Name__c )</errorConditionFormula>
    <errorDisplayField>Company_Name__c</errorDisplayField>
    <errorMessage>Please Enter Company Name</errorMessage>
</ValidationRule>