force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please Enter Email</errorMessage>
</ValidationRule>