force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/How_are_metadata_components_are_deployed.validationRule-meta.xml
<ValidationRule>
    <fullName>How_are_metadata_components_are_deployed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(How_are_metadata_components_being_dep__c,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>How_are_metadata_components_being_dep__c</errorDisplayField>
    <errorMessage>Please select how metadata components being deployed currently</errorMessage>
</ValidationRule>