force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/How_often_do_you_do_data_loading.validationRule-meta.xml
<ValidationRule>
    <fullName>How_often_do_you_do_data_loading</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( How_often_Data_Loader__c )</errorConditionFormula>
    <errorDisplayField>How_often_Data_Loader__c</errorDisplayField>
    <errorMessage>Please enter how often do you do data loading</errorMessage>
</ValidationRule>