force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/How_often_do_you_encounter_errors.validationRule-meta.xml
<ValidationRule>
    <fullName>How_often_do_you_encounter_errors</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( How_Often__c )</errorConditionFormula>
    <errorDisplayField>How_Often__c</errorDisplayField>
    <errorMessage>Please Enter encounter errors?</errorMessage>
</ValidationRule>