force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/No_records_do_you_migrate_per_data_load.validationRule-meta.xml
<ValidationRule>
    <fullName>No_records_do_you_migrate_per_data_load</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Typically_how_many_records_do_you_mi__c )</errorConditionFormula>
    <errorDisplayField>Typically_how_many_records_do_you_mi__c</errorDisplayField>
    <errorMessage>Please enter No.of records do you migrate per data load</errorMessage>
</ValidationRule>