force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Pain_point_during_Deployment_process.validationRule-meta.xml
<ValidationRule>
    <fullName>Pain_point_during_Deployment_process</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(What_are_the_pain_points_during_the_d__c)</errorConditionFormula>
    <errorDisplayField>What_are_the_pain_points_during_the_d__c</errorDisplayField>
    <errorMessage>Please Enter Pain point during Deployment process</errorMessage>
</ValidationRule>