force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Select_use_cases_evaluate_VC.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_use_cases_evaluate_VC</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Select_use_VC__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Select_use_VC__c</errorDisplayField>
    <errorMessage>Please select use cases that you’d like to evaluate</errorMessage>
</ValidationRule>