force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Select_use_cases_to_evaluate_Deployment.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_use_cases_to_evaluate_Deployment</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES( Select_use_cases_for_Deployment__c ,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Select_use_cases_for_Deployment__c</errorDisplayField>
    <errorMessage>Please select use cases to evaluate Deployment</errorMessage>
</ValidationRule>