force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/specify_other_Metadata_components.validationRule-meta.xml
<ValidationRule>
    <fullName>specify_other_Metadata_components</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  How_are_metadata_components_being_dep__c , &quot;Other&quot;),
ISBLANK(Plz_specify_other_Metadata_components__c)
)</errorConditionFormula>
    <errorDisplayField>Plz_specify_other_Metadata_components__c</errorDisplayField>
    <errorMessage>Please enter other Deployment type</errorMessage>
</ValidationRule>