force-app/main/default/objects/Questionnaire_Implementation__c/validationRules/Time_for_pre_post_deployment_steps.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_for_pre_post_deployment_steps</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( How_long_does_it_take_for_pre_post_de__c )</errorConditionFormula>
    <errorMessage>Please enter Time for pre/post deployment steps</errorMessage>
</ValidationRule>